log_output_ping-pong_application/manifests/deployment_greeter.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: exercises
  name: greeter-dep-v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: greeter
      version: v1
  template:
    metadata:
      labels:
        app: greeter
        version: v1
    spec:
      containers:
        - name: greeter
          image: hinichijou/greeter:v1
          livenessProbe:
            initialDelaySeconds: 5 # Initial delay until the liveness is tested
            periodSeconds: 5 # How often to test
            httpGet:
               path: /health
               port: 3000
          readinessProbe:
            initialDelaySeconds: 10 # Initial delay until the readiness is tested
            periodSeconds: 5 # How often to test
            httpGet:
               path: /ready
               port: 3000

---

apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: exercises
  name: greeter-dep-v2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: greeter
      version: v2
  template:
    metadata:
      labels:
        app: greeter
        version: v2
    spec:
      containers:
        - name: greeter
          image: hinichijou/greeter:v2
          livenessProbe:
            initialDelaySeconds: 5 # Initial delay until the liveness is tested
            periodSeconds: 5 # How often to test
            httpGet:
               path: /health
               port: 3000
          readinessProbe:
            initialDelaySeconds: 10 # Initial delay until the readiness is tested
            periodSeconds: 5 # How often to test
            httpGet:
               path: /ready
               port: 3000
