log_output_ping-pong_application/manifests/statefulset_postgres.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres-stset
  namespace: exercises
spec:
  serviceName: postgres-svc
  replicas: 2
  selector:
    matchLabels:
      app: postgresapp
  template:
    metadata:
      labels:
        app: postgresapp
    spec:
      containers:
        - name: postgres
          image: postgres:18-alpine3.24
          ports:
            - name: web
              containerPort: 5432
          volumeMounts:
            - name: postgres-data-storage
              mountPath: /var/lib/postgresql
          lifecycle:
            postStart:
              exec:
                #Simple database initialization
                command:
                  - /bin/sh
                  - -c
                  - >-
                    sleep 5 &&
                    PGPASSWORD=$POSTGRES_PASSWORD
                    psql -w
                    -U $POSTGRES_USER
                    -d $POSTGRES_DB
                    -c
                    'CREATE TABLE IF NOT EXISTS pingpongs (counter INTEGER);INSERT INTO pingpongs (counter) SELECT 0 WHERE NOT EXISTS (SELECT 1 FROM pingpongs);'
  volumeClaimTemplates:
    - metadata:
        name: postgres-data-storage
      spec:
        accessModes: ["ReadWriteOnce"]
        # 3.1: Google Kubernetes Engine will automatically provision a persistent disk for your PersistentVolumeClaim - just don't set the storage class. Uncomment for local use.
        storageClassName: local-path
        resources:
          requests:
            storage: 100Mi
