log_output_ping-pong_application/manifests/service_greeter.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: exercises
  name: greeter-svc
spec:
  type: ClusterIP
  selector:
    app: greeter
  ports:
    - port: 3000
      name: http
      protocol: TCP
      targetPort: 3000

---

apiVersion: v1
kind: Service
metadata:
  namespace: exercises
  name: greeter-svc-v1
spec:
  type: ClusterIP
  selector:
    app: greeter
    version: v1
  ports:
    - port: 3000
      name: http
      protocol: TCP
      targetPort: 3000

---

apiVersion: v1
kind: Service
metadata:
  namespace: exercises
  name: greeter-svc-v2
spec:
  type: ClusterIP
  selector:
    app: greeter
    version: v2
  ports:
    - port: 3000
      name: http
      protocol: TCP
      targetPort: 3000
