log_output_ping-pong_application/manifests/route_greeter.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  namespace: exercises
  name: greeter-route
spec:
  parentRefs:
  - group: ""
    kind: Service
    name: greeter-svc
    port: 3000
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /greeter
    backendRefs:
    - name: greeter-svc-v1
      port: 3000
      weight: 75
    - name: greeter-svc-v2
      port: 3000
      weight: 25
    filters:
      - type: URLRewrite
        urlRewrite:
          path:
            type: ReplacePrefixMatch
            replacePrefixMatch: /
