log_output_ping-pong_application/manifests/route_log_output.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  namespace: exercises
  name: log-output-route
spec:
  parentRefs:
  - name: infra-istio-gateway
    namespace: infra
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: logoutput-svc
      port: 2345
