log_output_ping-pong_application/manifests/route_ping_pong.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  namespace: exercises
  name: pingpongapp-route
spec:
  parentRefs:
  - name: infra-istio-gateway
    namespace: infra
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /pingpong
    backendRefs:
    - name: pingpongapp-svc
      port: 80
    filters:
      - type: URLRewrite
        urlRewrite:
          hostname: pingpongapp-svc.exercises.127.0.0.1.sslip.io
          path:
            # type ReplaceFullPath made more sense based on the gateway api documentation but apparently GKE Gateway Controller does not support the configuration
            type: ReplacePrefixMatch
            replacePrefixMatch: /
